--- a/frontend/fitness-club/package.json
+++ b/frontend/fitness-club/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.30",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -13,9 +14,11 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "date-fns": "^2.15.0",
+    "progressbar.js": "^1.1.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
