--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI = mongodb+srv://Dilmi-Nimasha:dilmi1234@cluster0-ginzp.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI = mongodb+srv://Dilmi-Nimasha:dilmi1234@cluster0-ginzp.mongodb.net/FitApp?retryWrites=true&w=majority
