--- a/frontend/fitness-club/package.json
+++ b/frontend/fitness-club/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "atomize": "^1.0.26",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "date-fns": "^2.15.0",
@@ -21,7 +22,9 @@
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
