--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "request": "^2.88.2",
     "sharp": "^0.25.4"
   },
