--- a/frontend/fitness-club/package.json
+++ b/frontend/fitness-club/package.json
@@ -18,6 +18,7 @@
     "progressbar.js": "^1.1.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
