--- a/frontend/fitness-club/package.json
+++ b/frontend/fitness-club/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "date-fns": "^2.15.0",
+    "jquery": "^3.5.1",
     "progressbar.js": "^1.1.0",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
