--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.6.0",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
     "multer": "^1.4.2",
     "path": "^0.12.7",
+    "pdfkit": "^0.11.0",
     "request": "^2.88.2",
     "sharp": "^0.25.4"
   },
