--- a/frontend/fitness-club/package.json
+++ b/frontend/fitness-club/package.json
@@ -27,6 +27,7 @@
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-to-print": "^2.10.0",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
