--- a/frontend/fitness-club/package.json
+++ b/frontend/fitness-club/package.json
@@ -20,14 +20,18 @@
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "progressbar.js": "^1.1.0",
+    "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
+    "react-emoji": "^0.5.0",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-scroll-to-bottom": "^4.0.0",
     "react-to-print": "^2.10.0",
+    "socket.io-client": "^2.3.1",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
